MarcoKitTests/TestData/error/object13.marco
--before
{
    baz[0]
}

--after
9-12: Whitespace required in a key-value pair
